<resources>
    <string name="app_name">New Pizza Yum</string>
    <string name="welcome_to">Welcome to</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="continue_text">Continue</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="message_otp">We have sent an OTP on your entered mobile no.</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="title_activity_user_details_form">ScrollingActivity</string>

    <string name="action_settings">Settings</string>
    <string name="sorry">Sorry</string>
    <string name="our_service_currently_not_available_in">Our service currently not available in</string>

    <!-- MENU ITEM S-->
    <string name="menuItemHome">Home</string>
    <string name="menuItemProfile">Profile</string>
    <string name="menuItemWallet">Wallet</string>
    <string name="menuItemOrder">Order</string>
    <string name="menuItemAddress">Address</string>
    <string name="menuItemHeaderSocial">Social</string>
    <string name="menuItemRateApp">Rate App</string>
    <string name="menuItemShareApp">Share App</string>
    <string name="menuItemHeaderSecurity">Security</string>
    <string name="menuItemContactUs">Contact Us</string>
    <string name="menuItemAboutUs">About Us</string>
    <string name="menuItemLogin">Log Out</string>
    <string name="my_addresses">My Addresses</string>
    <string name="your_details">Your Details</string>
    <string name="full_name">Full Name</string>
    <string name="customizable">customizable</string>
    <string name="title_activity_user_cart">user_cart</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="item">Items</string>
    <string name="sub_total">Sub-Total</string>
    <string name="_120">₹ 120</string>
    <string name="discount">Discount</string>
    <string name="tax">GST</string>
    <string name="deliveryCharge">Delivery Charge</string>
    <string name="discount_text">SELECT DISCOUNT/APPLY DISCOUNT <br />Get discount on your order</string>
    <string name="my_cart">My Cart</string>
    <string name="your_coupon_code">Your Coupon Code</string>
    <string name="apply">Apply</string>
    <string name="discounts">Discounts</string>
    <string name="place_order">Place Order</string>
    <string name="full_name_in_address">Full Name :</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="mobile_no_in_address">Mobile No:</string>
    <string name="your_mobile_no">Your Mobile No</string>
    <string name="locality">Locality:</string>
    <string name="your_locality_like_kakadev">Your Locality Like Kakadev</string>
    <string name="full_address">Full Address:</string>
    <string name="your_full_address_with_maximum_details_like_house_no_landmark_and_etc">Your full address with maximum details like house no.,landmark and etc.</string>
    <string name="pin_code">Pin Code:</string>
    <string name="your_pin_code">Your Pin Code</string>
    <string name="add">Add</string>
    <string name="add_new_address">Add new address</string>
    <string name="checkBox1">Make this address default address</string>
    <string name="order_details_instuctions">Your instructions like Give pizza to home guard.</string>
    <string name="select_restaurant">Select Restaurant</string>
    <string name="instructions_heading">Any instructions for us:</string>
    <string name="change_address">Change Address</string>
    <string name="your_address">Your Address</string>
    <string name="no_address_found">No Address Found</string>
    <string name="please_wait">Please wait...</string>
    <string name="npy_kakadev">New Pizza Yum [KAKADEV]</string>
    <string name="npy_barra_2">New Pizza Yum [BARRA-2]</string>
    <string name="npy_kakadev_address">117/480, P-block, Hitkari Nagar (Near Namak Factory Chauraha) Kakadeo Kanpur 208025</string>
    <string name="npy_barra_2_address">13-G-2 Yadav Market Chauraha Barra-2 Kanpur 208027</string>
    <string name="restaurentOpenAndCloseDate">10:00 AM to 09:30 PM</string>
    <string name="pay">Pay</string>
    <string name="total">Total</string>
    <string name="payment_id">Payment Id</string>





</resources>