<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_auth">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to"
            android:textSize="25sp"
            android:layout_marginTop="35dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fugaz_one"
            android:text="@string/app_name"
            android:textColor="@color/main"
            android:textSize="40sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="350dp"
            android:layout_marginTop="60dp"
            android:hint="@string/full_name"
            android:padding="12dp"
            android:inputType="text"
            android:autofillHints="auto"
            android:background="@drawable/login_edit_text" />

        <TextView
            android:id="@+id/user_name_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/user_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="350dp"
            android:layout_marginTop="10dp"
            android:hint="@string/mobile_no"
            android:padding="12dp"
            android:inputType="phone"
            android:autofillHints="auto"
            android:background="@drawable/login_edit_text" />


        <TextView
            android:id="@+id/user_mobile_number_input_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:visibility="gone" />


        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_text"
            android:textAllCaps="false"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>