<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".offers_and_discounts">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:src="@drawable/back_icon"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/click_feedback"
            android:layout_marginStart="15dp" />


        <TextView
            android:id="@+id/activity_top_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/fugaz_one"
            android:textColor="@color/white"
            android:text="@string/discounts"
            android:textSize="20sp" />

    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:paddingHorizontal="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/couponCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:textSize="16sp"
                android:hint="@string/your_coupon_code"/>
            <Button
                android:id="@+id/couponCodeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:text="@string/apply"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/offers_and_discounts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


</LinearLayout>